hphp/hack/test/typecheck/safe_abstract/concreteclassname_1.php.exp
ERROR: File "concreteclassname_1.php", line 23, characters 19-21:
Invalid argument (Typing[4110])
  File "concreteclassname_1.php", line 12, characters 26-47:
  Expected `concrete<classname<A>>`
  File "concreteclassname_1.php", line 3, characters 16-16:
  But got `class<A>`; implicitly defined constant `::class` is a reference to class `A`
